# healthcare-auditor

./: .gitignore  Dockerfile  README.md  SESSION_SUMMARY.md  docker-compose.localstack.yml  docker-compose.yml  run_tests.sh
.research/: CI_CD_DEVELOPMENT_PLAN.md  CI_CD_QUICKSTART.md  PHASE3_RULES_ENGINE_PLAN.md  PHASE4_IMPLEMENTATION_SUMMARY.md  SESSION_HANDOFF.md
backend/: .env.example  .gitignore  pyproject.toml  setup.py
backend/app/: __init__.py  config.py  main.py  middleware.py  security.py
backend/app/api/: __init__.py  alerts.py  auth.py  billing_codes.py  bills.py  health.py  knowledge_graph.py  providers.py  regulations.py
backend/app/core/: __init__.py  anomaly_detection.py  code_legality.py  database.py  graph_builder.py  ml_models.py  neo4j.py  network_analysis.py  risk_scoring.py  rules_engine.py  train_models.py
backend/app/fraud_detection/: __init__.py
backend/app/rules/: __init__.py  base.py  billing_rules.py  coding_rules.py  frequency_rules.py  medical_necessity_rules.py
backend/models/: __init__.py  alert.py  base.py  bill.py  billing_code.py  compliance_check.py  hospital.py  insurer.py  provider.py  regulation.py
backend/services/: main.py
docs/: KNOWLEDGE_GRAPH_STATE_MACHINE.md  ML_PIPELINE_STATE_MACHINE.md  RULES_ENGINE_STATE_MACHINE.md
frontend/: .eslintrc.json  Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
k8s/: README.md  backend-deployment.yaml  configmaps.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  neo4j-deployment.yaml  postgres-deployment.yaml  secrets.yaml
research-findings/: detection-methodologies.md  fraud-detection-patterns.md  implementation-roadmap.md
scripts/: build_graph.py  train_models.py  validate_bills.py
tests/: README.md  __init__.py  test_anomaly_detection.py  (+6 more)
(+75 files in other folders)
